2001-07-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 05.

	* lisp/nnmh.el (nnmh-retrieve-parsed-headers): Abolished.

	* lisp/gnus-sum.el (gnus-get-newsgroup-headers-xover): Don't use
	`gnus-retrieve-parsed-headers'.
	(gnus-fetch-headers): Ditto.

	* lisp/gnus-int.el (gnus-retrieve-parsed-headers): Abolished.

	* lisp/gnus-cache.el (gnus-cache-braid-headers): Abolished.
	(gnus-cache-retrieve-parsed-headers): Abolished.

2001-07-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-request-expire-articles): Bind
	`nnmail-expiry-wait-function' to nil if the group's parameter
	`expiry-wait' is specified by the user or the shimbun's default
	value is provided.

2001-07-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-msg.el (gnus-message-make-user-agent): New
	implementation.

2001-07-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-clfns.el (copy-list): New compiler macro.

2001-07-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-delay.el (gnus-delay-initialize): Don't use the macro
	`kbd'.

	* lisp/nnheader.el (mm-read-coding-system): New function which is
	a substitute for mm-util.el.

2001-07-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 04.

	* lisp/nntp.el (nntp-request-newgroups): Use UTC date for
	NEWGROUPS command.

	* lisp/gnus-start.el (gnus-find-new-newsgroups): Use
	`message-make-date' instead of `current-time-string'.
	(gnus-ask-server-for-new-groups): Ditto.
	(gnus-check-first-time-used): Ditto.

2001-07-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* texi/message-ja.texi (message-citation-line-function): Add a
	comma just after the `@xref' form.

	* lisp/nnheader.el (nnheader-header-value): Ignore leading
	whitespaces.

	* lisp/dgnushack.el (dgnushack-make-auto-load): Advise
	`make-autoload' to handle `define-derived-mode'.

2001-07-12  Katsumi Yamaoka <yamaoka@jpl.org>
